# gtest-basics

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt
src/calculator/: CMakeLists.txt  calculator.cpp
src/dbconnection/: CMakeLists.txt  IDatabaseConnect.h  database.h  database2.h  dbconnection.cpp  dbconnection2.cpp  dbconnection3.cpp  idatabaseconnect.h  mockclass.h  mockdatabaseconnect.h  mydbclient.h  mydbclient2.h
src/filesystem/: CMakeLists.txt  filesystem.cpp
